# vistadream

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.clinerules/: clinerules.md
.github/: copilot-instructions.md
docs/: masks.md  single_img_pipeline.md  spiral_trajectory_explained.md
notebooks/: initialization.ipynb
src/vistadream/: __init__.py  resize_utils.py
src/vistadream/api/: flux_outpainting.py  single_img_nooutpaint.py  single_img_pipeline.py  vistadream_pipeline.py
src/vistadream/flux/: __init__.py  _version.py  cli.py  cli_control.py  cli_fill.py  cli_redux.py  model.py  sampling.py  util.py
src/vistadream/flux/modules/: autoencoder.py  conditioner.py  image_embedders.py  layers.py
src/vistadream/gradio/: vistadream_ui.py
src/vistadream/ops/: connect.py  flux.py  mcs.py  utils.py  visual_check.py
src/vistadream/ops/gs/: basic.py  train.py
src/vistadream/ops/trajs/: TRAJECTORY.MD  __init__.py  basic.py  interp.py  spiral.py  wobble.py
tools/: app.py  gradio_app.py  run_flux_outpainting.py  run_nooutpaint.py  run_single_img.py  run_vistadream.py
